@@ -9,6 +9,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   on 64-bit systems
 - Added SWI "Brandy_GetVideoDriver" as a wrapper for SDL_VideoDriverName,
   additionally returns "no_sdl" for non-SDL builds
+- Extended SWI "Brandy_Version" to also return host OS and whether or not it's
+  an SDL build.
 
 * V1.21.19
 - Hopefully fixed the spurious cursor remnants.
